acid/k8s/keycloak/keycloak-deployment.yaml
# Déploiement et service Keycloak (mode simple)
# Placez ce fichier dans le dossier keycloak/ pour une structure claire
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        fsGroup: 1000 # UID pour les fichiers créés par Keycloak
        runAsUser: 1000 # UID pour l'utilisateur qui exécute Keycloak
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          volumeMounts:
            - name: keycloak-storage
              mountPath: /opt/keycloak/data
          # L'option --proxy=edge indique à Keycloak (Quarkus 17+) qu'il est derrière un ingress/reverse proxy HTTPS
          # et qu'il doit générer toutes les URLs internes en HTTPS (sinon erreurs Mixed Content et intégration SSO impossible)
          args: ["start-dev", "--proxy=edge"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "250m"
      volumes:
        - name: keycloak-storage
          persistentVolumeClaim:
            claimName: keycloak-pvc
